# ParallelComputing

./: .gitignore  CMakeLists.txt  benchmark.cpp  count.h  get_book.sh  main.cpp  test.cpp  utils.h
plot_clang/: plot.script
plot_gcc/: plot.script
plot_laptop/: plot.script
report/: main.tex  plot.script  report.tex  titlepage.tex
stats/: all.txt  mpPlotData.txt  pthPlotData.txt  pthreads.txt  seq.txt  stat.txt
stats_clang/: all.txt  openmp.txt  pthreads.txt  seq.txt
stats_gcc/: all.txt  openmp.txt  openmp_ed.csv  pthreads.txt  pthreads_ed.csv  seq.txt
stats_laptop/: all.txt  openmp.txt  openmp_ed.csv  pthreads.fods  pthreads.txt  pthreads_ed.csv  seq.txt
